--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "ndb": "^1.1.5"
   }
 }
