--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/agkyawpai/Natours#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongodb": "^3.7.4",
