--- a/config.env
+++ b/config.env
@@ -4,3 +4,6 @@ USERNAME=aungkyawpaing
 DATABASE=mongodb+srv://aungkyawpaing65:<PASSWORD>@cluster0.qvzdy4b.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=7EftseTFoUH47RkR
+
+JWT_SECRET=naykg-kyapar-yaelar-khinbya-hello-world
+JWT_EXPIRES_IN=90d
