--- a/config.env
+++ b/config.env
@@ -7,3 +7,8 @@ DATABASE_PASSWORD=7EftseTFoUH47RkR
 
 JWT_SECRET=naykg-kyapar-yaelar-khinbya-hello-world
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=c4673073c0c830
+EMAIL_PASSWORD=f384695bf85637
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
