--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "homepage": "https://github.com/agkyawpai/Natours#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.0",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^3.7.4",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.1.1",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
   },
