--- a/config.env
+++ b/config.env
@@ -7,6 +7,7 @@ DATABASE_PASSWORD=7EftseTFoUH47RkR
 
 JWT_SECRET=naykg-kyapar-yaelar-khinbya-hello-world
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=c4673073c0c830
 EMAIL_PASSWORD=f384695bf85637
