--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^3.7.4",
     "mongoose": "^5.13.22",
